Define the header as fixed element and set it to z-index 1000 in style.css file.

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ header ul li a{
 header{
     width: 100%;
     background-color: var(--bg-header);
+    position: fixed;
+    z-index: 1000;
 }
 .logo img{
     width: 150px;
